fix layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,14 @@
 
 body {
   margin: 0px;
+  min-width: 1400px;
   font-family: "Roboto Condensed";
+  overflow-y: scroll;
 }
 
 div.blocoTrilha {
   margin: 30px;
+  min-width: 1340px;
 }
 
 div.blocoLocal {
